Digitization of cadastral map module updated with resources

--- a/Digitization_Using_QGIS_ReadMore.html
+++ b/Digitization_Using_QGIS_ReadMore.html
@@ -142,11 +142,11 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid bg-primary py-5 mb-5 page-header page-header-geoRef">
+    <div class="container-fluid bg-primary py-5 mb-5 page-header page-header-digitization">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 animated slideInDown">Georeferencing Using QGIS: Simple Starter Steps to Help in Geo-Referencing</h1>
+                    <h1 class="display-3 animated slideInDown">Digitization of Cadastral Maps Using QGIS: Simple Starter Steps to Help in Digitization</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="" href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a></li>                            
@@ -214,51 +214,46 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/geoRef_Banner1.png" alt="" style="object-fit: cover;">
+                        <img class="img-fluid position-absolute w-100 h-100" src="img/digitization_banner.png" alt="" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">About Module</h6>
-                    <h1 class="mb-4">Georeferencing Using QGIS: Simple Starter Steps to Help in Geo-Referencing</h1>
-                    <p class="mb-4">Geo-Referencing is the main and important part of the Geospatial data processing and which helps in bringing the non spatial data into a spatial data</p>
+                    <h1 class="mb-4">Digitization of Cadastral Maps Using QGIS: Simple Starter Steps to Help in Digitization</h1>
+                    <p class="mb-4">Digitization in GIS is the process of converting geographic data from paper maps or images into digital vector formats by tracing spatial features like points, lines, and polygons. This enables efficient data storage, analysis, and integration within GIS systems for improved spatial decision-making.</p>
                     
                     <h5 class="section-title bg-white text-start text-primary pe-3">Module Topics</h5>
                     <div>
                         <h6>Module Overview</h6>
-                        <p>
-                            This E-Module, <span class="text-primary">“Georeferencing Using QGIS: Simple Starter Steps to Help in Geo-Referencing”</span>, serves as a beginner-friendly guide to the essentials of georeferencing. It introduces you to the step-by-step process using the open-source GIS software, QGIS. The content has been carefully compiled and structured to ensure clarity and simplicity, making it easy for learners to follow along and perform the georeferencing process independently.
-                        </p>
+                        <p class="mb-4">The digitization of cadastral maps involves converting traditional paper-based or scanned cadastral records into accurate, editable digital formats using GIS software like QGIS. This process enables the creation of spatially referenced property boundaries, facilitates easier data management, etc.</p>
+                        <p class="mb-4">Digital cadastral maps enhance <b class="text-primary">accessibility, ensure data integrity, and allow for quick updates and integrations with other geospatial datasets, making them invaluable in modern land management and urban development</b></p>
                         <h6>Learning Objectives</h6>
                         <p>
                             Upon completion of this module, learners will be able to:
                             <div class="row gy-2 gx-4 mb-4 ps-4">
                                 <div class="col-sm-6">
-                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Understand the Meaning and Purpose of Geo-Referencing in GIS</p>
+                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Understand the fundamental concepts and importance of digitization</p>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Recognize the Different types of Geo-Reference</p>
+                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Gain proficiency in using QGIS software tools for digitizing</p>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Understand the Steps Available in Performing all the Types of Geo-Referencing</p>
+                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Learn to apply appropriate digitization methods and techniques</p>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Gain proficiency in using QGIS software tools for Geo-Referencing</p>
+                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Develop skills to integrate and analyze digitized data within GIS</p>
                                 </div>                                
                             </div>
-                        </p>
-                        <h6 class="section-title bg-white text-start text-primary pe-3">1. Introduction</h6>
+                        </p>                        
                         <p>                            
-                            <h6>Introduction to Geo-Referencing</h6>                            
+                            <h6 class="section-title bg-white text-start text-primary pe-3">1. Introduction</h6>
+                        <p>                            
+                            <h6>Introduction to Digitization in GIS</h6>                            
                         </p>
-                        <h6 class="section-title bg-white text-start text-primary pe-3">2: Geo-referencing using Ground Control Points (GCPs):</h6>
-                        <p><h6>Steps involved in the geo-referencing using the GCPs method.</h6>                        
-                        </p>
-                        <h6 class="section-title bg-white text-start text-primary pe-3">3. Geo-referencing Using Image-to-Image:</h6>
-                        <p>
-                            <h6>Steps involved in the geo-referencing using the Image-to-Image method.</h6>
-                        </p>                                               
+                        <h6 class="section-title bg-white text-start text-primary pe-3">2: Digitizing a Cadastral Map in QGIS:</h6>
+                        <p><h6>Steps involved in the Digitization of Cadastral Maps using the QGIS Software.</h6></p>
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="./CoursesContent/GeoReference_Using_QGIS.html" target="_blank"><i class="fa fa-rocket text-white me-2"></i>Launch E-Module</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2" href="./CoursesContent/Digitization_Using_QGIS.html" target="_blank"><i class="fa fa-rocket text-white me-2"></i>Launch E-Module</a>
                 </div>
             </div>
         </div>
