--- a/index.html
+++ b/index.html
@@ -227,6 +227,22 @@
                     </div>
                 </div>
             </div>
+            <div class="owl-carousel-item position-relative">
+                <img class="img-fluid" src="img/propertyLayers_Banner_Wide.png" alt="">
+                <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-sm-10 col-lg-8">
+                                <h5 class="text-primary text-uppercase mb-3 animated slideInDown">E-Modules</h5>
+                                <h1 class="display-3 text-white animated slideInDown">Creation of Property Layer Using QGIS</h1>
+                                <p class="fs-5 text-white mb-4 pb-2">Simple Starter Module For Beginners with steps to help in creationf properry layers using the open GIS source software QGIS</p>
+                                <a href="./Creation_of_PropertyLayers_ReadMore.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="./CoursesContent/Creationg_of_PropertyLayers_Module.html" target="_blank" class="btn btn-light py-md-3 px-md-5 animated slideInRight">View Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- <div class="owl-carousel-item position-relative">
                 <img class="img-fluid" src="img/qgis.png" alt="">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
