pointed jquery to local lib life and edited property layers topics

--- a/CoursesContent/Creationg_of_PropertyLayers_Module.html
+++ b/CoursesContent/Creationg_of_PropertyLayers_Module.html
@@ -151,7 +151,7 @@
                     <i class="fas fa-chevron-left"></i>
                 </button>        
                 <div class="p-4">
-                    <h4 class="logo-text fw-bold mb-0">Creation of Property Layers Using QGIS</h4>
+                    <h4 class="logo-text fw-bold mb-0">Importing CSV Files & Creation of Land Parcel Boundary Using QGIS</h4>
                     <p class="text-muted small hide-on-collapse">Chapters List</p>
                 </div>        
                 <div class="nav flex-column pb-2">
@@ -604,7 +604,7 @@
                                                                 <h5>7. Conclusion</h5>
                                                                 <div class="row">
                                                                     <div col="col col-md-12 col-lg-12">
-                                                                        The property parcel layer created from the imported from property boundary points(CSV) files will be integrated with the Land Parcel data. This integration enables linking property tax and RoR (Record of Rights) details with the corresponding land parcels. This approach enhances data accuracy and supports efficient land administration.
+                                                                        The property parcel layer created from imported property boundary points(CSV) file will be integrated with the Land Parcel data. This integration enables linking property tax and RoR (Record of Rights) details with the corresponding land parcels. This approach enhances data accuracy and supports efficient land administration.
                                                                     </div>
                                                                 </div>
                                                             </div>                                                            
@@ -1486,9 +1486,9 @@
 
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="../lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
+    <script src="../lib/wow/wow.min.js"></script>
     <script src="../lib/easing/easing.min.js"></script>
     <script src="../lib/waypoints/waypoints.min.js"></script>
     <script src="../lib/owlcarousel/owl.carousel.min.js"></script>
