--- a/Creation_of_PropertyLayers_ReadMore.html
+++ b/Creation_of_PropertyLayers_ReadMore.html
@@ -146,7 +146,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 animated slideInDown">Creation of Property Layers Using QGIS</h1>
+                    <h1 class="display-3 animated slideInDown">Importing CSV Files & Creation of Land Parcel Boundary Using QGIS</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="" href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a></li>                            
@@ -219,7 +219,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">About Module</h6>
-                    <h1 class="mb-4">Creation of Property Layers using QGIS</h1>
+                    <h1 class="mb-4">Importing CSV Files & Creation of Land Parcel Boundary Using QGIS</h1>
                     <h5 class="section-title bg-white text-start text-primary pe-3">Module Topics</h5>
                     <div>
                         <h6>Module Overview</h6>
@@ -245,10 +245,10 @@
                         <p>                            
                             <h6 class="section-title bg-white text-start text-primary pe-3">1. Introduction</h6>
                         <p>                            
-                            <h6>Introduction to GNSS NRTK Surveying and its outputs used for propery layers generation</h6>                            
+                            <h6>Introduction to GNSS NRTK Surveying and its outputs used for property layers generation</h6>                            
                         </p>
-                        <h6 class="section-title bg-white text-start text-primary pe-3">2: Creation of Propery Layers Steps using QGIS:</h6>
-                        <p><h6>Steps involved in the creation of propery layers using the QGIS Software.</h6></p>
+                        <h6 class="section-title bg-white text-start text-primary pe-3">2: Creation of Property Layers Steps using QGIS:</h6>
+                        <p><h6>Steps involved in the creation of property layers using the QGIS Software.</h6></p>
                     </div>
                     <a class="btn btn-primary py-3 px-5 mt-2" href="./CoursesContent/Creationg_of_PropertyLayers_Module.html" target="_blank"><i class="fa fa-rocket text-white me-2"></i>Launch E-Module</a>
                 </div>
@@ -444,7 +444,7 @@
 
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
