--- a/CoursesContent/LandSurveyAndManagmentMod.html
+++ b/CoursesContent/LandSurveyAndManagmentMod.html
@@ -196,7 +196,7 @@
     </nav>
     <span class="right-toggle-btn" id="right-toggle-btn"><i class="fas fa-angle-left"></i></span>
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="../lib/jquery/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../lib/wow/wow.min.js"></script>
     <script src="../lib/easing/easing.min.js"></script>
