--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
                         <div class="row justify-content-start">
                             <div class="col-sm-10 col-lg-8">
                                 <h5 class="text-primary text-uppercase mb-3 animated slideInDown">E-Modules</h5>
-                                <h1 class="display-3 text-white animated slideInDown">Creation of Property Layer Using QGIS</h1>
-                                <p class="fs-5 text-white mb-4 pb-2">Simple Starter Module For Beginners with steps to help in creationf properry layers using the open GIS source software QGIS</p>
+                                <h1 class="display-3 text-white animated slideInDown">Importing CSV Files & Creation of Land Parcel Boundary Using QGIS</h1>
+                                <p class="fs-5 text-white mb-4 pb-2">Simple Starter Module For Beginners with steps to help in creation of property layers using the open GIS source software QGIS</p>
                                 <a href="./Creation_of_PropertyLayers_ReadMore.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
                                 <a href="./CoursesContent/Creationg_of_PropertyLayers_Module.html" target="_blank" class="btn btn-light py-md-3 px-md-5 animated slideInRight">View Now</a>
                             </div>
