momentarily commented the basics of gis and land survey modules

--- a/CoursesContent/LandSurveyAndManagmentModule.html
+++ b/CoursesContent/LandSurveyAndManagmentModule.html
@@ -151,7 +151,7 @@
                 </button>
         
                 <div class="p-4">
-                    <h4 class="logo-text fw-bold mb-0">Land Survey Basics</h4>
+                    <h4 class="logo-text fw-bold mb-0">Basics of Land Survey</h4>
                     <p class="text-muted small hide-on-collapse">Chapters List</p>
                 </div>
         
@@ -165,7 +165,7 @@
                         <span class="hide-on-collapse"> Survey of India's CORS Service</span>
                         <!-- <i class="fas fa-chevron-down float-end hide-on-collapse chapterSubmenuHandle"></i>
                         <i class="fas fa-chevron-up float-end chapterSubmenuHandle" hidden></i> -->
-                    </a>                    
+                    </a>
                         <!-- <nav class="subChaptersNavList">
                             <ul>
                                 <li>
