splitting of modules basics of land survey and CORS is done with resize of banner images in index page and some typo errors cleared for basics of GIS

--- a/CORS_Urban_Survey_ReadMore.html
+++ b/CORS_Urban_Survey_ReadMore.html
@@ -142,11 +142,11 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid bg-primary py-5 mb-5 page-header page-header-landSurvey">
+    <div class="container-fluid bg-primary py-5 mb-5 page-header page-header-corsUrbanSurvey">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Land Survey Basics Module</h1>
+                    <h1 class="display-3 text-white animated slideInDown">Introduction to CORS, Its utilities & Urban Survey Methodologies</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a></li>                            
@@ -217,54 +217,79 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">About Module</h6>
-                    <h1 class="mb-4">Welcome to Land Survey Module</h1>                                        
+                    <h1 class="mb-4">Welcome to Introduction to CORS, Its utilities & Urban Survey Methodologies</h1>                                        
                     <div>
                         <h6>Module Overview</h6>
                         <p class="textJustify">
-                            This e-module is designed to assist both patwaris (land revenue officials) in understanding land surveying, digitizing paper maps, and geo-referencing using QGIS (Quantum Geographic Information System). By the end of this module, learners will be able to effectively manage and digitize land records, ensuring accessible land information.
+                            This e-module is designed to assist land revenue officials and others in understanding land surveying in the context of Urban Surveying with the help of introducing the new CORS technology used by the GNSS NRTK rovers. By the end of this module, learners will be able to effectively manage and digitize land records, ensuring accessible land information.
                         </p>
                         <h6>Learning Objectives</h6>
                         <p class="textJustify">
                             Upon completion of this module, learners will be able to:
                             <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-6">
-                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Comprehend the fundamentals of land surveying.</p>
+                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>What is CORS and why it is needed?</p>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Understanding about Traditional and Modern Survey.</p>
+                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Learning about the SOI's CORS Network.</p>
                                 </div>
                                 <div class="col-sm-6">
-                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Learning about tools used in survey and their respective Pros and Cons.</p>
+                                    <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Understanding step by step methodologies for land survey in the scenario of Urban Local Bodies.</p>
                                 </div>
                             </div>
                         </p>
-                        <h6 class="section-title bg-white text-start text-primary pe-3">1. Introduction to Land Surveying</h6>
+                        <h6 class="section-title bg-white text-start text-primary pe-3">1. Introduction to CORS Network</h6>
                         <p class="textJustify">
-                            Land surveying is the process of measuring and mapping of land to establish boundaries and create accurate land records. It helps to determine the land ownership, resolving disputes, and to guide in land development.
-                            <h6>Key Concepts:</h6>
+                            Explaining about the CORS and basic technology behind it                            
+                        </p>
+                        <h6 class="section-title bg-white text-start text-primary pe-3">2. Survey of India's CORS Service</h6>
+                        <p class="textJustify">                            
+                            <h6>Key Features and Services of CORS:</h6>
                             <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-12">
-                                    <p class="mb-0"><b>Boundary Measurement:</b> Identifying and marking the boundaries of land parcels.</p>
+                                    <p class="mb-0"><b>Standard Operation Procedure (SOP) for CORS Registration Process</b></p>
                                 </div>
                                 <div class="col-sm-12">
-                                    <p class="mb-0"><b>Triangulation:</b> A method of locating points by forming triangles with known points.</p>
+                                    <p class="mb-0"><b>Real Time Positioning Services</b></p>
                                 </div>
                                 <div class="col-sm-12">
-                                    <p class="mb-0"><b>Topographic Maps: </b> Geo-reference digitized maps using QGIS.</p>
-                                </div>
+                                    <p class="mb-0"><b>Reference Data Services</b></p>
+                                </div>                                
                             </div>
-                            <h6>Tools Used in Land Surveying:</h6>
+                            <h6>CORS Station Distribution Map for all States of CoE, BNYCRS, LBSNAA</h6>                            
+                        </p>
+                        <h6 class="section-title bg-white text-start text-primary pe-3">3. Field Survey Steps - An Overview</h6>
+                        <p class="textJustify">
+                            An overview of the field survey's salient instructions and a simple step by step description of the methodologies which is used for field survey, by using an urban city survey scenario based case studies.
+                            <h6>Field Survey of Land Parcel - Basics:</h6>
                             <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-12">
-                                    <p class="mb-0"><b>Total Station:</b> Accurately measures distances and angles.</p>
-                                </div>
+                                    <p class="mb-0"><b>Key Steps in a Land Parcel Survey</b></p>
+                                </div>                                
+                            </div>
+                            <h6>Tools Used for Land Survey</h6>
+                            <div class="row gy-2 gx-4 mb-4">
                                 <div class="col-sm-12">
-                                    <p class="mb-0"><b>Theodolite:</b> Measures horizontal and vertical angles.</p>
-                                </div>
-                                <div class="col-sm-12">
-                                    <p class="mb-0"><b>GPS: </b> Provides precise location coordinates.</p>
+                                    <ul>
+                                        <li><b>Understanding GNSS Receivers (GNSS Rovers)</b></li>
+                                        <li><b>Real-Time Kinematic (RTK) GPS </b>– High-Precision Positioning</li>
+                                        <li><b>Electronic Total Station (ETS) with GNSS </b>– Advanced Surveying Technology</li>
+                                        <li><b>Field Data Collector (FDC)</b> with <b>WebGIS</b> for Field Survey</li>
+                                        <li>Distance-Distance Measurement using a <b>Laser Range Finder</b></li>
+                                        <li><b>Reference Stations </b>– Correcting GPS/GNSS Errors</li>
+                                    </ul>
                                 </div>
                             </div>
+                            <h6>Field survey - Methodologies and Salient Instructions</h6>
+                            <div class="row gy-2 gx-4 mb-4">
+                                <div class="col-sm-12">
+                                    <ul>
+                                        <li>Surveying Properties in a City – Simplified Steps</li>
+                                        <li>Field Survey: Salient Instructions</li>
+                                        <li>Field Survey Methodologies</li>
+                                    </ul>
+                                </div>
+                            </div>                                                                         
                         </p>
                         <!-- <h6 class="section-title bg-white text-start text-primary pe-3">2. Digitization of Paper Maps</h6>
                         <p class="textJustify">
@@ -321,7 +346,7 @@
                             </div>
                         </p> -->
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="CoursesContent/LandSurveyAndManagmentModule.html" target="_blank"><i class="fa fa-rocket text-white me-2"></i>Launch E-Module</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2" href="CoursesContent/CORS_Urban_Survey_Module.html" target="_blank"><i class="fa fa-rocket text-white me-2"></i>Launch E-Module</a>
                 </div>
             </div>
         </div>
