--- a/CoursesContent/Basics_GIS_Module.html
+++ b/CoursesContent/Basics_GIS_Module.html
@@ -418,7 +418,7 @@
                                                                             Since these vector datatype files are used on the computer systems, just like how Microsoft word, excel, etc., data files are all represented with a particular file extension types, the vector data files are also represented in different file types and its extensions.
                                                                         </p>
                                                                         <p>
-                                                                            In order to maitain the stability and easy inter-operability, the Open Geo-Spatial Consortium (OGC) have come up with certain standards for representing the vector data in a particualar file types. It is adviced only to create or utlize the vector data in these OGC standard defined vector data types ony.
+                                                                            In order to maintain the stability and easy inter-operability, the Open Geo-Spatial Consortium (OGC) have come up with certain standards for representing the vector data in a particular file types. It is advised only to create or utlize the vector data in these OGC standard defined vector data types ony.
                                                                         </p>
                                                                         <p>
                                                                             OGC Standard vector data file types and its file extension:
@@ -484,7 +484,7 @@
                                                                             Since these raster datatype image files are used on the computer systems, &rpar;just like how PNG, JPEG, GIF, etc.,&lpar; raster data files are all represented with a particular file types and their respective extensions.
                                                                         </p>
                                                                         <p>
-                                                                            In order to maitain the stability and easy inter-operability, the Open Geo-Spatial Consortium (OGC) have come up with certain standards for representing the raster data in a particualar file types. It is adviced only to create or utlize the raster data in these OGC standard defined raster data types ony.
+                                                                            In order to maintain the stability and easy inter-operability, the Open Geo-Spatial Consortium (OGC) have come up with certain standards for representing the raster data in a particular file types. It is advised only to create or urlize the raster data in these OGC standard defined raster data types ony.
                                                                         </p>
                                                                         <p>
                                                                             OGC Standard vector data file types and its file extension:
@@ -1274,7 +1274,7 @@
                                                                         </p>
                                                                         <p><b class="text-info">IV. Don’t Miss This</b>
                                                                         <ul>
-                                                                            <li>Our <b class="text-logoGreen">E-BhuAdhyan</b> Portal has a dedicated E-Module on <b>GIS and QGIS</b></li>
+                                                                            <li>Our <b class="text-logoGreen">eBhuAdhyan</b> Portal has a dedicated E-Module on <b>GIS and QGIS</b></li>
                                                                             <li>Designed specially for beginners in land governance</li>
                                                                             <li>Includes step-by-step instructions, visuals & practice material</li>
                                                                             <li>Available for free to all trainees, officers & stakeholders</li>
