--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="owl-carousel-item position-relative">
+            <div class="owl-carousel-item position-relative">
                 <img class="img-fluid" src="img/carousel-2.jpg" alt="">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
                     <div class="container">
@@ -178,8 +178,24 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
-            <!-- <div class="owl-carousel-item position-relative">
+            </div>
+            <div class="owl-carousel-item position-relative">
+                <img class="img-fluid" src="img/cors_Survey_Banner.png" alt="">
+                <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-sm-10 col-lg-8">
+                                <h5 class="text-primary text-uppercase mb-3 animated slideInDown">E-Modules</h5>
+                                <h1 class="display-3 text-white animated slideInDown">Introduction to CORS, Its utilities & Urban Survey Methodologies</h1>
+                                <p class="fs-5 text-white mb-4 pb-2">Understanding about the CORS & its coverage in India & learning about the modern survey methodologies used in the context of urban survey scenarios.</p>
+                                <a href="./CORS_Urban_Survey_ReadMore.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
+                                <a href="./CoursesContent/CORS_Urban_Survey_Module.html" target="_blank" class="btn btn-light py-md-3 px-md-5 animated slideInRight">View Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="owl-carousel-item position-relative">
                 <img class="img-fluid" src="img/basics_GIS_Banner.jpg" alt="">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
                     <div class="container">
@@ -194,7 +210,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
             <div class="owl-carousel-item position-relative">
                 <img class="img-fluid" src="img/geoRef_Banner.png" alt="">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
@@ -234,8 +250,8 @@
                         <div class="row justify-content-start">
                             <div class="col-sm-10 col-lg-8">
                                 <h5 class="text-primary text-uppercase mb-3 animated slideInDown">E-Modules</h5>
-                                <h1 class="display-3 text-white animated slideInDown">Importing CSV Files & Creation of Land Parcel Boundary Using QGIS</h1>
-                                <p class="fs-5 text-white mb-4 pb-2">Simple Starter Module For Beginners with steps to help in creation of property layers using the open GIS source software QGIS</p>
+                                <h1 class="display-3 text-white animated slideInDown">Creation of Property Layer Using QGIS</h1>
+                                <p class="fs-5 text-white mb-4 pb-2">Simple Starter Module For Beginners with steps to help in creationf properry layers using the open GIS source software QGIS</p>
                                 <a href="./Creation_of_PropertyLayers_ReadMore.html" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
                                 <a href="./CoursesContent/Creationg_of_PropertyLayers_Module.html" target="_blank" class="btn btn-light py-md-3 px-md-5 animated slideInRight">View Now</a>
                             </div>
