cleared typo in index page and text color issue on CORS read more page

--- a/CORS_Urban_Survey_ReadMore.html
+++ b/CORS_Urban_Survey_ReadMore.html
@@ -146,11 +146,11 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Introduction to CORS, Its utilities & Urban Survey Methodologies</h1>
+                    <h1 class="display-3 animated slideInDown">Introduction to CORS, Its utilities & Urban Survey Methodologies</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
-                            <li class="breadcrumb-item"><a class="text-white" href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a></li>                            
-                            <li class="breadcrumb-item text-white active" aria-current="page">Read More</li>
+                            <li class="breadcrumb-item"><a class="text-danger" href="https://zapkingdude.github.io/E-BhuAdhyan_CoE_LBSNAA_Beta_v0.1/">Home</a></li>                            
+                            <li class="breadcrumb-item text-black active" aria-current="page">Read More</li>
                         </ol>
                     </nav>
                 </div>
